--- a/Flutterasia/Main.storyboard
+++ b/Flutterasia/Main.storyboard
@@ -101,8 +101,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="hgZ-W5-8HU">
-                                <rect key="frame" x="0.0" y="64" width="320" height="548"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="hgZ-W5-8HU">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="31x-p7-j7e">
                                         <rect key="frame" x="8" y="80" width="304" height="30"/>
@@ -111,13 +111,13 @@
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="z1p-pY-TEy">
-                                        <rect key="frame" x="8.5" y="120" width="304" height="30"/>
+                                        <rect key="frame" x="8" y="120" width="304" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vOG-f5-DDw">
-                                        <rect key="frame" x="8.5" y="160" width="304" height="30"/>
+                                        <rect key="frame" x="8" y="160" width="304" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
@@ -129,13 +129,13 @@
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Retype Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4gc-3f-NQF">
-                                        <rect key="frame" x="8" y="240" width="304.5" height="30"/>
+                                        <rect key="frame" x="8" y="240" width="304" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAH-ei-fkB">
-                                        <rect key="frame" x="52.5" y="380" width="215" height="30"/>
+                                        <rect key="frame" x="53" y="380" width="215" height="30"/>
                                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="215" id="Ytt-Md-qaR"/>
@@ -154,7 +154,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nWS-i4-tgF">
-                                        <rect key="frame" x="52.5" y="420" width="215" height="30"/>
+                                        <rect key="frame" x="53" y="420" width="215" height="30"/>
                                         <state key="normal" title="I have an account. Let me login"/>
                                         <connections>
                                             <segue destination="Wcj-dP-Vtm" kind="unwind" identifier="backToLoginView" unwindAction="unwindToLogInScreenWithUnwindSegue:" id="vhw-3b-ZVy"/>
@@ -172,9 +172,9 @@
                                     <constraint firstItem="vOG-f5-DDw" firstAttribute="leading" secondItem="z1p-pY-TEy" secondAttribute="leading" id="FFk-om-kF8"/>
                                     <constraint firstItem="z1p-pY-TEy" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="H54-Tp-a9k"/>
                                     <constraint firstItem="Bmp-4R-qQV" firstAttribute="leading" secondItem="vOG-f5-DDw" secondAttribute="leading" id="HQR-SG-DDD"/>
-                                    <constraint firstItem="4gc-3f-NQF" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="J67-7c-HaM"/>
                                     <constraint firstItem="31x-p7-j7e" firstAttribute="trailing" secondItem="hgZ-W5-8HU" secondAttribute="trailingMargin" id="M3m-ev-ZVu"/>
                                     <constraint firstItem="vOG-f5-DDw" firstAttribute="top" secondItem="z1p-pY-TEy" secondAttribute="bottom" constant="10" id="MRi-WW-X1Y"/>
+                                    <constraint firstAttribute="bottom" secondItem="nWS-i4-tgF" secondAttribute="bottom" constant="118" id="QNn-DA-JIq"/>
                                     <constraint firstItem="kAH-ei-fkB" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="TYg-4i-4be"/>
                                     <constraint firstItem="vOG-f5-DDw" firstAttribute="width" secondItem="z1p-pY-TEy" secondAttribute="width" id="UGV-66-s5s"/>
                                     <constraint firstItem="z1p-pY-TEy" firstAttribute="top" secondItem="31x-p7-j7e" secondAttribute="bottom" constant="10" id="Vu8-si-JTs"/>
@@ -198,7 +198,6 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="hgZ-W5-8HU" secondAttribute="trailing" id="LTx-1Q-nRF"/>
-                            <constraint firstItem="hgZ-W5-8HU" firstAttribute="top" secondItem="1WX-32-LiZ" secondAttribute="bottom" constant="10" id="Ybu-PV-Bvc"/>
                             <constraint firstItem="hgZ-W5-8HU" firstAttribute="leading" secondItem="z15-lE-GWj" secondAttribute="leading" id="ZY4-4q-hPN"/>
                             <constraint firstItem="hgZ-W5-8HU" firstAttribute="top" secondItem="1WX-32-LiZ" secondAttribute="bottom" id="qJR-1A-Wbj"/>
                             <constraint firstItem="C12-no-BqM" firstAttribute="top" secondItem="hgZ-W5-8HU" secondAttribute="bottom" id="rha-jw-XGk"/>
@@ -209,6 +208,7 @@
                         <outlet property="fullNameTextField" destination="31x-p7-j7e" id="1I5-cN-8m8"/>
                         <outlet property="passwordTextField" destination="Bmp-4R-qQV" id="0AG-fD-S0v"/>
                         <outlet property="phoneTextField" destination="vOG-f5-DDw" id="Z0o-OG-uCn"/>
+                        <outlet property="profileImageView" destination="XM1-Tv-1mG" id="t9I-WX-bK2"/>
                         <outlet property="retypePasswordTextField" destination="4gc-3f-NQF" id="5lZ-7C-jEp"/>
                         <outlet property="scrollView" destination="hgZ-W5-8HU" id="D0x-xh-zCI"/>
                     </connections>
@@ -216,7 +216,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ho8-wH-lkm" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Wcj-dP-Vtm" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2737.5" y="-184.85915492957747"/>
+            <point key="canvasLocation" x="2737" y="-185"/>
         </scene>
     </scenes>
     <resources>
